Fix spotbugs warning